Add menu options and implement corresponding methods
- Implement menu options for converting XML, showing XML, obtaining characters, saving characters, showing characters, and locating characters.
- Add input validation for episode and character selection.
- Implement methods for handling each menu option.
- Add utility methods for cleaning the console and getting valid integer input.